# python-project-50

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  sonar-project.propertie
.github/workflows/: test_gendiff.yml
gendiff/: __init__.py  cli.py
gendiff/core/: __init__.py  gendiff_engine.py  generate_diff.py  parse.py  parser.py
gendiff/core/formatters/: formatters.py  json.py  plain.py  stylish.py
gendiff/engine/: __init__.py  gendiff_engine.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/test_data/: expected_big.txt  expected_diff.json  file1.yml  file2.yaml
