[project]
authors = [
    {name = "Aleksandr Berezov", email = "berezov86@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff! Second project on python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"